Verified the docker files and made sure everything matches up with the services, finished the ymals for the k8s mainfests. documentations for future references, starting the deployment

--- a/payment-service/Dockerfile
+++ b/payment-service/Dockerfile
@@ -8,6 +8,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-EXPOSE 8002
-
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8002"]
+# Payment service is a long-running script, not HTTP API
+CMD ["python", "main.py"]
